@@ -21,6 +21,7 @@ Version 1.5.7+svn:
  * Miscellaneous and bug fixes:
    * Added the sunset feature to the new dialogs.
    * Fix the calculate feature in the test scenario.
+   * Fix an endian issue which rendered text wrong on big endian machines.
 
 Version 1.5.7:
  * Campaigns:
